objects/Deal_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Risks</relationshipLabel>
        <relationshipName>Deal_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Represents whether this is a risk still affecting the deal or not.</description>
        <inlineHelpText>Represents whether this is a risk still affecting the deal or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Deal Risks</relationshipLabel>
        <relationshipName>Deal_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Deal Risks</relationshipLabel>
        <relationshipName>Deal_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_ACV__c</fullName>
        <formula>Opportunity__r.ACV__c</formula>
        <label>Opportunity ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_TCV__c</fullName>
        <formula>Opportunity__r.TCV__c</formula>
        <label>Opportunity TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Risks</relationshipLabel>
        <relationshipName>Deal_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <inlineHelpText>Critical: The prospect WILL NOT buy or the customer WILL NOT renew without the Feature or User Story becoming available. 
High: The prospect or customer has expressed major buying concerns. 
Medium: The prospect or customer will probably buy/renew but has expressed that the feature is very important to their success.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Deal Risks</relationshipLabel>
        <relationshipName>Deal_Risks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_ACV__c</columns>
        <columns>Case__c</columns>
        <columns>Feature__c</columns>
        <columns>Notes__c</columns>
        <columns>User_Story__c</columns>
        <columns>Severity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deal Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>